// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`<ImportContentsView /> should render an expanded block correctly 1`] = `
<table
  class="border-brand-gray w-full border"
  data-testid="BlockVehicleJourneysTable::table"
  id="SUMMER_SCHEDULES Week day service"
>
  <thead>
    <tr
      class="[&>th]:border [&>th]:border-light-grey"
      data-testid="BlockVehicleJourneysTable::titleRow"
    >
      <th
        class="w-1/6 bg-brand px-6 py-2 text-left text-white"
        data-testid="BlockVehicleJourneysTable::blockLabel"
      >
        Week day service
      </th>
      <th
        class="border-l border-l-white bg-white px-4 py-2 text-left text-hsl-dark-80"
        colspan="4"
      >
        <div
          class="flex flex-row flex-1 items-center justify-between font-normal"
          title=""
        >
          <p
            data-testid="BlockVehicleJourneysTable::vehicleType"
          >
            Kalustotyyppi - Mini B
          </p>
          <button
            aria-controls="SUMMER_SCHEDULES Week day service"
            aria-expanded="true"
            class="text-center"
            data-testid="BlockVehicleJourneysTable::toggleShowTable"
            title="Piilota autokierron SUMMER_SCHEDULES Week day service tiedot"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="pointer-events-none text-brand text-[50px] inline text-center"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M7.41 15.41 12 10.83l4.59 4.58L18 14l-6-6-6 6z"
              />
            </svg>
          </button>
        </div>
      </th>
    </tr>
    <tr
      class="bg-white [&>th]:px-5 [&>th]:py-2 [&>th]:text-left [&>th]:font-normal"
      data-testid="BlockVehicleJourneysTable::vehicleJourneyHeaders"
    >
      <th>
        Tunnus
      </th>
      <th>
        Päivätyyppi
      </th>
      <th>
        Lähtöaika
      </th>
      <th>
        Päättymisaika
      </th>
      <th>
        Sopimusnumero
      </th>
    </tr>
  </thead>
  <tbody>
    <tr
      class="even:bg-white [&>td]:border [&>td]:border-light-grey [&>td]:px-5 [&>td]:py-2"
      data-testid="VehicleJourneyRow"
    >
      <td>
        <div
          class="flex flex-row items-center font-bold"
          title=""
        >
          <span
            class="relative flex items-center justify-center bg-brand font-bold text-white mr-2 h-5 w-5 text-base"
            data-testid="DirectionBadge"
            title="1 - Keskustasta pois"
          >
            <span
              aria-hidden="true"
              aria-label="1 - Keskustasta pois"
              data-testid="DirectionBadge::outbound"
            >
              1
            </span>
          </span>
          <span
            data-testid="VehicleJourneyRow::label"
          >
            35
          </span>
        </div>
      </td>
      <td
        data-testid="VehicleJourneyRow::dayTypeName"
      >
        Maanantai - Perjantai
      </td>
      <td
        data-testid="VehicleJourneyRow::startTime"
      >
        15:00
      </td>
      <td
        data-testid="VehicleJourneyRow::endTime"
      >
        15:25
      </td>
      <td
        data-testid="VehicleJourneyRow::contractNumber"
      >
        CONTRACT_1
      </td>
    </tr>
    <tr
      class="even:bg-white [&>td]:border [&>td]:border-light-grey [&>td]:px-5 [&>td]:py-2"
      data-testid="VehicleJourneyRow"
    >
      <td>
        <div
          class="flex flex-row items-center font-bold"
          title=""
        >
          <span
            class="relative flex items-center justify-center bg-brand font-bold text-white mr-2 h-5 w-5 text-base"
            data-testid="DirectionBadge"
            title="2 - Keskustaan päin"
          >
            <span
              aria-hidden="true"
              aria-label="2 - Keskustaan päin"
              data-testid="DirectionBadge::inbound"
            >
              2
            </span>
          </span>
          <span
            data-testid="VehicleJourneyRow::label"
          >
            35
          </span>
        </div>
      </td>
      <td
        data-testid="VehicleJourneyRow::dayTypeName"
      >
        Maanantai - Perjantai
      </td>
      <td
        data-testid="VehicleJourneyRow::startTime"
      >
        15:30
      </td>
      <td
        data-testid="VehicleJourneyRow::endTime"
      >
        15:55
      </td>
      <td
        data-testid="VehicleJourneyRow::contractNumber"
      >
        CONTRACT_1
      </td>
    </tr>
    <tr
      class="even:bg-white [&>td]:border [&>td]:border-light-grey [&>td]:px-5 [&>td]:py-2"
      data-testid="VehicleJourneyRow"
    >
      <td>
        <div
          class="flex flex-row items-center font-bold"
          title=""
        >
          <span
            class="relative flex items-center justify-center bg-brand font-bold text-white mr-2 h-5 w-5 text-base"
            data-testid="DirectionBadge"
            title="1 - Keskustasta pois"
          >
            <span
              aria-hidden="true"
              aria-label="1 - Keskustasta pois"
              data-testid="DirectionBadge::outbound"
            >
              1
            </span>
          </span>
          <span
            data-testid="VehicleJourneyRow::label"
          >
            35
          </span>
        </div>
      </td>
      <td
        data-testid="VehicleJourneyRow::dayTypeName"
      >
        Maanantai - Perjantai
      </td>
      <td
        data-testid="VehicleJourneyRow::startTime"
      >
        16:00
      </td>
      <td
        data-testid="VehicleJourneyRow::endTime"
      >
        16:25
      </td>
      <td
        data-testid="VehicleJourneyRow::contractNumber"
      >
        CONTRACT_1
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`<ImportContentsView /> should render correctly 1`] = `
<DocumentFragment>
  <div
    class="space-y-3"
  >
    <h2>
      Tiedoston sisältö
    </h2>
    <div
      data-testid="VehicleScheduleFrameBlocksView::frameBlocks::SUMMER_SCHEDULES"
    >
      <div
        class="flex flex-row border-brand-gray w-full border text-white"
        data-testid="VehicleScheduleFrameBlocksView::frameTitleRow"
        title=""
      >
        <p
          class="flex w-1/6 items-center border border-light-grey bg-brand px-6 py-2 font-bold"
          data-testid="VehicleScheduleFrameBlocksView::frameLabel"
        >
          SUMMER_SCHEDULES
        </p>
        <div
          class="flex flex-row flex-1 border border-l border-light-grey border-l-white bg-brand px-4 py-2"
          title=""
        >
          <div
            class="flex flex-row flex-1 items-center justify-between font-normal"
            title=""
          >
            <p
              data-testid="VehicleScheduleFrameBlocksView::validityTimeRangeText"
            >
              1.6.2023 - 31.8.2023 | 2 autokiertoa
            </p>
            <button
              aria-controls="SUMMER_SCHEDULESBlocks"
              aria-expanded="true"
              class="text-center"
              data-testid="VehicleScheduleFrameBlocksView::toggleShowTable"
              title="Piilota aikataulun SUMMER_SCHEDULES autokierrot"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="pointer-events-none text-white text-[50px] inline text-center"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="M7.41 15.41 12 10.83l4.59 4.58L18 14l-6-6-6 6z"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
      <div
        class="my-4 space-y-4"
        id="SUMMER_SCHEDULESBlocks"
      >
        <table
          class="border-brand-gray w-full border"
          data-testid="BlockVehicleJourneysTable::table"
          id="SUMMER_SCHEDULES Week day service"
        >
          <thead>
            <tr
              class="[&>th]:border [&>th]:border-light-grey"
              data-testid="BlockVehicleJourneysTable::titleRow"
            >
              <th
                class="w-1/6 bg-brand px-6 py-2 text-left text-white"
                data-testid="BlockVehicleJourneysTable::blockLabel"
              >
                Week day service
              </th>
              <th
                class="border-l border-l-white bg-white px-4 py-2 text-left text-hsl-dark-80"
                colspan="4"
              >
                <div
                  class="flex flex-row flex-1 items-center justify-between font-normal"
                  title=""
                >
                  <p
                    data-testid="BlockVehicleJourneysTable::vehicleType"
                  >
                    Kalustotyyppi - Mini B
                  </p>
                  <button
                    aria-controls="SUMMER_SCHEDULES Week day service"
                    aria-expanded="false"
                    class="text-center"
                    data-testid="BlockVehicleJourneysTable::toggleShowTable"
                    title="Näytä autokierron SUMMER_SCHEDULES Week day service tiedot"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="pointer-events-none text-brand text-[50px] inline text-center"
                      fill="currentColor"
                      height="1em"
                      stroke="currentColor"
                      stroke-width="0"
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M0 0h24v24H0V0z"
                        fill="none"
                      />
                      <path
                        d="M7.41 8.59 12 13.17l4.59-4.58L18 10l-6 6-6-6 1.41-1.41z"
                      />
                    </svg>
                  </button>
                </div>
              </th>
            </tr>
          </thead>
        </table>
        <table
          class="border-brand-gray w-full border"
          data-testid="BlockVehicleJourneysTable::table"
          id="SUMMER_SCHEDULES Saturday service"
        >
          <thead>
            <tr
              class="[&>th]:border [&>th]:border-light-grey"
              data-testid="BlockVehicleJourneysTable::titleRow"
            >
              <th
                class="w-1/6 bg-brand px-6 py-2 text-left text-white"
                data-testid="BlockVehicleJourneysTable::blockLabel"
              >
                Saturday service
              </th>
              <th
                class="border-l border-l-white bg-white px-4 py-2 text-left text-hsl-dark-80"
                colspan="4"
              >
                <div
                  class="flex flex-row flex-1 items-center justify-between font-normal"
                  title=""
                >
                  <p
                    data-testid="BlockVehicleJourneysTable::vehicleType"
                  >
                    Kalustotyyppi - Mini B
                  </p>
                  <button
                    aria-controls="SUMMER_SCHEDULES Saturday service"
                    aria-expanded="false"
                    class="text-center"
                    data-testid="BlockVehicleJourneysTable::toggleShowTable"
                    title="Näytä autokierron SUMMER_SCHEDULES Saturday service tiedot"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="pointer-events-none text-brand text-[50px] inline text-center"
                      fill="currentColor"
                      height="1em"
                      stroke="currentColor"
                      stroke-width="0"
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M0 0h24v24H0V0z"
                        fill="none"
                      />
                      <path
                        d="M7.41 8.59 12 13.17l4.59-4.58L18 10l-6 6-6-6 1.41-1.41z"
                      />
                    </svg>
                  </button>
                </div>
              </th>
            </tr>
          </thead>
        </table>
      </div>
    </div>
    <div
      data-testid="VehicleScheduleFrameBlocksView::frameBlocks::AUTUMN_SCHEDULES"
    >
      <div
        class="flex flex-row border-brand-gray w-full border text-white"
        data-testid="VehicleScheduleFrameBlocksView::frameTitleRow"
        title=""
      >
        <p
          class="flex w-1/6 items-center border border-light-grey bg-brand px-6 py-2 font-bold"
          data-testid="VehicleScheduleFrameBlocksView::frameLabel"
        >
          AUTUMN_SCHEDULES
        </p>
        <div
          class="flex flex-row flex-1 border border-l border-light-grey border-l-white bg-brand px-4 py-2"
          title=""
        >
          <div
            class="flex flex-row flex-1 items-center justify-between font-normal"
            title=""
          >
            <p
              data-testid="VehicleScheduleFrameBlocksView::validityTimeRangeText"
            >
              1.9.2023 - 31.12.2023 | 1 autokiertoa
            </p>
            <button
              aria-controls="AUTUMN_SCHEDULESBlocks"
              aria-expanded="true"
              class="text-center"
              data-testid="VehicleScheduleFrameBlocksView::toggleShowTable"
              title="Piilota aikataulun AUTUMN_SCHEDULES autokierrot"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="pointer-events-none text-white text-[50px] inline text-center"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="M7.41 15.41 12 10.83l4.59 4.58L18 14l-6-6-6 6z"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
      <div
        class="my-4 space-y-4"
        id="AUTUMN_SCHEDULESBlocks"
      >
        <table
          class="border-brand-gray w-full border"
          data-testid="BlockVehicleJourneysTable::table"
          id="AUTUMN_SCHEDULES Sunday service"
        >
          <thead>
            <tr
              class="[&>th]:border [&>th]:border-light-grey"
              data-testid="BlockVehicleJourneysTable::titleRow"
            >
              <th
                class="w-1/6 bg-brand px-6 py-2 text-left text-white"
                data-testid="BlockVehicleJourneysTable::blockLabel"
              >
                Sunday service
              </th>
              <th
                class="border-l border-l-white bg-white px-4 py-2 text-left text-hsl-dark-80"
                colspan="4"
              >
                <div
                  class="flex flex-row flex-1 items-center justify-between font-normal"
                  title=""
                >
                  <p
                    data-testid="BlockVehicleJourneysTable::vehicleType"
                  >
                    Kalustotyyppi - Mini A
                  </p>
                  <button
                    aria-controls="AUTUMN_SCHEDULES Sunday service"
                    aria-expanded="false"
                    class="text-center"
                    data-testid="BlockVehicleJourneysTable::toggleShowTable"
                    title="Näytä autokierron AUTUMN_SCHEDULES Sunday service tiedot"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="pointer-events-none text-brand text-[50px] inline text-center"
                      fill="currentColor"
                      height="1em"
                      stroke="currentColor"
                      stroke-width="0"
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M0 0h24v24H0V0z"
                        fill="none"
                      />
                      <path
                        d="M7.41 8.59 12 13.17l4.59-4.58L18 10l-6 6-6-6 1.41-1.41z"
                      />
                    </svg>
                  </button>
                </div>
              </th>
            </tr>
          </thead>
        </table>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
